@@ -10,9 +10,6 @@ import com.mongodb.client.FindIterable;
 import com.mongodb.client.MongoCollection;
 import entity.*;
 import use_case.add_to_watchlist.AddToWatchlistDataAccessInterface;
-
-import static com.mongodb.client.model.Filters.eq;
-
 import use_case.create_watchlist.CreateWatchlistDataAccessInterface;
 import use_case.home.HomeUserDataAccessInterface;
 import use_case.leave_a_review.LeaveReviewDataAccessInterface;
@@ -20,7 +17,7 @@ import use_case.login.LoginUserDataAccessInterface;
 import use_case.logout.LogoutUserDataAccessInterface;
 import use_case.my_reviews.MyReviewsDataAccessInterface;
 import use_case.signup.SignupUserDataAccessInterface;
-import use_case.survey1.Survey1UserDataAccessInterface;
+import use_case.survey_one.Survey1UserDataAccessInterface;
 import use_case.survey_second_page.SurveySecondPageDataAccessInterface;
 import use_case.watchlist.WatchlistUserDataAccessInterface;
 import use_case.watchlist.remove.RemoveMovieUserDataAccessInterface;
@@ -42,30 +39,33 @@ public class DBUserDataAccessObject implements SignupUserDataAccessInterface,
     private static final String CONTENT_TYPE_LABEL = "Content-Type";
     private static final String CONTENT_TYPE_JSON = "application/json";
     private static final String STATUS_CODE_LABEL = "status_code";
+    private static final String USER_ID = "userId";
     private static final String USERNAME = "username";
     private static final String PASSWORD = "password";
     private static final String MESSAGE = "message";
     private static final String WATCHLIST = "watchlist";
     private static final String WATCHLIST_NAME = "watchlistName";
     private static final String MOVIES = "movies";
+    private static final String MOVIE_IDS = "movieIds";
+    private static final String PW = "previouslyWatched";
+    private static final String WATCHLIST_TO_USER = "Error adding watchlist to user: ";
+    private static final String PUSH = "$push";
     private final CommonUserFactory userFactory;
     private final CommonUserWatchlistFactory watchlistFactory;
-    private final CommonMovieFactory movieFactory;
     private final APIMovieAccess apiMovieAccess = new APIMovieAccess();
 
-    DataBaseConstructor database = new DataBaseConstructor();
-    MongoCollection<Document> collection = database.GetCollection("Users");
+    private final DataBaseConstructor database = new DataBaseConstructor();
+    private final MongoCollection<Document> collection = database.GetCollection("Users");
 
     public DBUserDataAccessObject(CommonUserFactory userFactory) {
         this.userFactory = userFactory;
         this.watchlistFactory = new CommonUserWatchlistFactory();
-        this.movieFactory = new CommonMovieFactory();
         // No need to do anything to reinitialize a user list! The data is the cloud that may be miles away.
     }
 
     @Override
     public User get(String username) {
-        final Document userDocument = collection.find(eq("userId", username)).first();
+        final Document userDocument = collection.find(eq(USER_ID, username)).first();
 
         if (userDocument != null) {
             // Extract fields from the document
@@ -86,15 +86,15 @@ public class DBUserDataAccessObject implements SignupUserDataAccessInterface,
                     final List<String> movies = watchlistDoc.getList(MOVIES, String.class);
 
                     if (!movies.isEmpty()) {
-                        final List<Integer> movieIds = watchlistDoc.getList("movieIds", Integer.class);
+                        final List<Integer> movieIds = watchlistDoc.getList(MOVIE_IDS, Integer.class);
                         for (int i = 0; i < movies.size(); i++) {
-//                            final Integer id = Integer.parseInt(movieIds.get(i));
+                            // final Integer id = Integer.parseInt(movieIds.get(i));
                             final Movie movie = apiMovieAccess.searchByID(movies.get(i), movieIds.get(i));
                             try {
                                 watchlist.addMovie(movie);
                             }
-                            catch (Exception e) {
-                                System.out.println("Movie not saved: " + e.getMessage());
+                            catch (Exception exception) {
+                                System.out.println("Movie not saved: " + exception.getMessage());
                             }
                         }
                     }
@@ -104,20 +104,21 @@ public class DBUserDataAccessObject implements SignupUserDataAccessInterface,
             user.setWatchlists(watchlists);
 
             // Retrieve PWL
-            final Document pwlDoc = userDocument.get("previouslyWatched", Document.class);
+            final Document pwlDoc = userDocument.get(PW, Document.class);
             if (pwlDoc != null) {
                 final String pwlName = pwlDoc.getString(WATCHLIST_NAME);
                 final UserWatchlist pwl = watchlistFactory.create(pwlName);
 
                 final List<String> pwlMovies = pwlDoc.getList(MOVIES, String.class);
                 if (pwlMovies != null && !pwlMovies.isEmpty()) {
-                    final List<Integer> pwlmovieIds = pwlDoc.getList("movieIds", Integer.class);
+                    final List<Integer> pwlmovieIds = pwlDoc.getList(MOVIE_IDS, Integer.class);
                     for (int i = 0; i < pwlMovies.size(); i++) {
                         final Movie movie = apiMovieAccess.searchByID(pwlMovies.get(i), pwlmovieIds.get(i));
                         try {
                             pwl.addMovie(movie);
-                        } catch (Exception e) {
-                            System.out.println("Movie not added to PWL: " + e.getMessage());
+                        }
+                        catch (Exception exception) {
+                            System.out.println("Movie not added to PWL: " + exception.getMessage());
                         }
                     }
                 }
@@ -163,7 +164,7 @@ public class DBUserDataAccessObject implements SignupUserDataAccessInterface,
     @Override
     public boolean existsByName(String username) {
         final MongoCollection<Document> collection = DataBaseConstructor.GetCollection("Users");
-        final FindIterable<Document> findIterable = collection.find(eq("userId", username));
+        final FindIterable<Document> findIterable = collection.find(eq(USER_ID, username));
 
         return findIterable.first() != null;
     }
@@ -175,7 +176,7 @@ public class DBUserDataAccessObject implements SignupUserDataAccessInterface,
 
     @Override
     public void save(User user) {
-        final Document newAccount = new Document("userId", user.getName())
+        final Document newAccount = new Document(USER_ID, user.getName())
                 .append("username", user.getName())
                 .append("password", user.getPassword());
         collection.insertOne(newAccount);
@@ -186,27 +187,28 @@ public class DBUserDataAccessObject implements SignupUserDataAccessInterface,
     public boolean saveWatchlist(User user, UserWatchlist watchlist) {
         boolean success = false;
         try {
-            List<String> movieNames = new ArrayList<>();
-            List<Integer> movieIds = new ArrayList<>();
+            final List<String> movieNames = new ArrayList<>();
+            final List<Integer> movieIds = new ArrayList<>();
             for (Movie movie : watchlist.getMovies()) {
                 movieNames.add(movie.getTitle());
                 movieIds.add(movie.getMovieId());
             }
 
             // Create a document representing the review
-            Document watchlistDoc = new Document()
+            final Document watchlistDoc = new Document()
                     .append(WATCHLIST_NAME, watchlist.getListName())
-                    .append("movies", movieNames)
+                    .append(MOVIES, movieNames)
                     .append("movieIds", movieIds);
 
             collection.updateOne(
-                    new Document("userId", user.getName()),
-                    new Document("$push", new Document(WATCHLIST, watchlistDoc))
+                    new Document(USER_ID, user.getName()),
+                    new Document(PUSH, new Document(WATCHLIST, watchlistDoc))
             );
 
             success = true;
-        } catch (Exception e) {
-            System.err.println("Error adding watchlist to user: " + e.getMessage());
+        }
+        catch (Exception exception) {
+            System.err.println(WATCHLIST_TO_USER + exception.getMessage());
         }
         return success;
     }
@@ -216,17 +218,18 @@ public class DBUserDataAccessObject implements SignupUserDataAccessInterface,
         boolean success = false;
         try {
             collection.updateOne(
-                    new Document("userId", user.getName()),
+                    new Document(USER_ID, user.getName()),
                     new Document("$unset", new Document(WATCHLIST + "." + ind, ind))
             );
             collection.updateOne(
-                    new Document("userId", user.getName()),
+                    new Document(USER_ID, user.getName()),
                     new Document("$pull", new Document(WATCHLIST, null))
             );
 
             success = true;
-        } catch (Exception e) {
-            System.err.println("Error adding watchlist to user: " + e.getMessage());
+        }
+        catch (Exception exception) {
+            System.err.println(WATCHLIST_TO_USER + exception.getMessage());
         }
         return success;
     }
@@ -296,16 +299,17 @@ public class DBUserDataAccessObject implements SignupUserDataAccessInterface,
     @Override
     public boolean renameWatchlist(User user, int ind, String newName) {
         boolean success = false;
-        final String path = WATCHLIST + "." + ind + "." + "watchlistName";
+        final String path = WATCHLIST + "." + ind + "." + WATCHLIST_NAME;
         try {
             collection.updateOne(
-                    new Document("userId", user.getName()),
+                    new Document(USER_ID, user.getName()),
                     new Document("$set", new Document(path, newName))
             );
 
             success = true;
-        } catch (Exception e) {
-            System.err.println("Error adding watchlist to user: " + e.getMessage());
+        }
+        catch (Exception exception) {
+            System.err.println(WATCHLIST_TO_USER + exception.getMessage());
         }
         return success;
     }
@@ -313,8 +317,8 @@ public class DBUserDataAccessObject implements SignupUserDataAccessInterface,
     @Override
     public void savePwl(User user) {
         try {
-            List<String> movieNames = new ArrayList<>();
-            List<Integer> movieIds = new ArrayList<>();
+            final List<String> movieNames = new ArrayList<>();
+            final List<Integer> movieIds = new ArrayList<>();
             for (Movie movie : user.getPwl().getMovies()) {
                 movieNames.add(movie.getTitle());
                 movieIds.add(movie.getMovieId());
@@ -322,15 +326,16 @@ public class DBUserDataAccessObject implements SignupUserDataAccessInterface,
             // Create a document representing the review
             final Document pwlDoc = new Document()
                     .append(WATCHLIST_NAME, user.getPwl().getListName())
-                    .append("movies", movieNames)
-                    .append("movieIds", movieIds);
+                    .append(MOVIES, movieNames)
+                    .append(MOVIE_IDS, movieIds);
 
             collection.updateOne(
-                    new Document("userId", user.getName()),
-                    new Document("$set", new Document("previouslyWatched", pwlDoc))
+                    new Document(USER_ID, user.getName()),
+                    new Document("$set", new Document(PW, pwlDoc))
             );
-        } catch (Exception e) {
-            System.err.println("Error adding pwl to user: " + e.getMessage());
+        }
+        catch (Exception exception) {
+            System.err.println("Error adding pwl to user: " + exception.getMessage());
         }
     }
 
@@ -339,20 +344,20 @@ public class DBUserDataAccessObject implements SignupUserDataAccessInterface,
         boolean success = false;
         try {
             // Find the user's document in the collection
-            final Document userDoc = collection.find(new Document("userId", user.getName())).first();
+            final Document userDoc = collection.find(new Document(USER_ID, user.getName())).first();
 
             if (userDoc != null) {
-                final Document pwlDoc = userDoc.get("previouslyWatched", Document.class);
+                final Document pwlDoc = userDoc.get(PW, Document.class);
 
                 if (pwlDoc != null) {
                     // Update the watchlist by adding the new movie
                     collection.updateOne(
-                            new Document("userId", user.getName()),
-                            new Document("$push", new Document("previouslyWatched.movies", movie.getTitle()))
+                            new Document(USER_ID, user.getName()),
+                            new Document(PUSH, new Document(PW + "." + MOVIES, movie.getTitle()))
                     );
                     collection.updateOne(
-                            new Document("userId", user.getName()),
-                            new Document("$push", new Document("previouslyWatched.movieIds", movie.getMovieId()))
+                            new Document(USER_ID, user.getName()),
+                            new Document(PUSH, new Document(PW + "." + MOVIE_IDS, movie.getMovieId()))
                     );
                     System.out.println("Movie added to watchlist successfully!");
                     success = true;
@@ -360,12 +365,12 @@ public class DBUserDataAccessObject implements SignupUserDataAccessInterface,
                 else {
                     // If the PWL doesn't exist, create it and add the movie
                     final Document newPwlDoc = new Document()
-                            .append("watchlistName", "Previously Watched")
-                            .append("movies", Arrays.asList(movie.getTitle()))
-                            .append("movieIds", Arrays.asList(movie.getMovieId()));
+                            .append(WATCHLIST_NAME, "Previously Watched")
+                            .append(MOVIES, Collections.singletonList(movie.getTitle()))
+                            .append(MOVIE_IDS, List.of(movie.getMovieId()));
                     collection.updateOne(
-                            new Document("userId", user.getName()),
-                            new Document("$set", new Document("previouslyWatched", newPwlDoc))
+                            new Document(USER_ID, user.getName()),
+                            new Document("$set", new Document(PW, newPwlDoc))
                     );
                     System.out.println("Previously Watched List created and movie added!");
                 }
@@ -374,8 +379,8 @@ public class DBUserDataAccessObject implements SignupUserDataAccessInterface,
                 System.err.println("User not found.");
             }
         }
-        catch (Exception e) {
-            System.err.println("Error adding movie to previously watched list: " + e.getMessage());
+        catch (Exception exception) {
+            System.err.println("Error adding movie to previously watched list: " + exception.getMessage());
         }
         return success;
     }
@@ -395,24 +400,21 @@ public class DBUserDataAccessObject implements SignupUserDataAccessInterface,
             final GenreMap genreMap = new GenreMap();
             final List<String> genreNames = Arrays.stream(genreMap.keySet()).toList();
 
-            final List<Object> weight = new ArrayList<>();
-            for (Integer score : preferredGenres.values()) {
-                weight.add(score);
-            }
+            final List<Object> weight = new ArrayList<>(preferredGenres.values());
 
             final Document preferredGenresDoc = new Document()
                     .append("genreNames", genreNames)
                     .append("weight", weight);
 
             collection.updateOne(
-                    new Document("userId", user.getName()),
-                    new Document("$push", new Document("preferredGenres", preferredGenresDoc))
+                    new Document(USER_ID, user.getName()),
+                    new Document(PUSH, new Document("preferredGenres", preferredGenresDoc))
 
             );
             success = true;
         }
-        catch (Exception e) {
-            System.out.println("Error adding preferred genres: " + e.getMessage());
+        catch (Exception exception) {
+            System.out.println("Error adding preferred genres: " + exception.getMessage());
         }
         System.out.println("Preferred genres saved successfully!");
         return success;
@@ -423,20 +425,20 @@ public class DBUserDataAccessObject implements SignupUserDataAccessInterface,
         boolean success = false;
         try {
             // Find the user's document in the collection
-            final Document userDoc = collection.find(new Document("userId", user.getName())).first();
+            final Document userDoc = collection.find(new Document(USER_ID, user.getName())).first();
 
             if (userDoc != null) {
-                final String path1 = WATCHLIST + "." + ind + ".movies";
-                final String path2 = WATCHLIST + "." + ind + ".movieIds";
+                final String path1 = WATCHLIST + "." + ind + "." + MOVIES;
+                final String path2 = WATCHLIST + "." + ind + "." + MOVIE_IDS;
 
                 // Update the watchlist by adding the new movie
                 collection.updateOne(
-                        new Document("userId", user.getName()),
-                        new Document("$push", new Document(path1, movie.getTitle()))
+                        new Document(USER_ID, user.getName()),
+                        new Document(PUSH, new Document(path1, movie.getTitle()))
                 );
                 collection.updateOne(
-                        new Document("userId", user.getName()),
-                        new Document("$push", new Document(path2, movie.getMovieId()))
+                        new Document(USER_ID, user.getName()),
+                        new Document(PUSH, new Document(path2, movie.getMovieId()))
                 );
                 System.out.println("Movie added to watchlist successfully!");
                 success = true;
@@ -445,8 +447,8 @@ public class DBUserDataAccessObject implements SignupUserDataAccessInterface,
                 System.err.println("User not found.");
             }
         }
-        catch (Exception e) {
-            System.err.println("Error adding movie to watchlist: " + e.getMessage());
+        catch (Exception exception) {
+            System.err.println("Error adding movie to watchlist: " + exception.getMessage());
         }
         return success;
     }
@@ -458,7 +460,7 @@ public class DBUserDataAccessObject implements SignupUserDataAccessInterface,
         final ArrayList<UserWatchlist> watchlists = new ArrayList<>();
 
         // Query the "Users" collection to find the user and their reviews
-        final Document userDoc = collection.find(new Document("userId", user.getName())).first();
+        final Document userDoc = collection.find(new Document(USER_ID, user.getName())).first();
 
         if (userDoc != null) {
             // Extract the user's reviews (assuming reviews are stored in a sub-document or array)
@@ -467,9 +469,8 @@ public class DBUserDataAccessObject implements SignupUserDataAccessInterface,
             if (rawWatchlists != null) {
                 // Iterate over each review and transform it into a MovieReview object
                 for (Document watchlistDoc : rawWatchlists) {
-                    final String watchlistName = watchlistDoc.getString("watchlistName");
-                    final List<Movie> movies = watchlistDoc.getList("movies", Movie.class);
-
+                    final String watchlistName = watchlistDoc.getString(WATCHLIST_NAME);
+                    final List<Movie> movies = watchlistDoc.getList(MOVIES, Movie.class);
 
                     // Use the factory to create the Watchlist
                     final UserWatchlist watchlist;
@@ -479,8 +480,9 @@ public class DBUserDataAccessObject implements SignupUserDataAccessInterface,
                         for (Movie movie : movies) {
                             try {
                                 watchlist.addMovie(movie);
-                            } catch (Exception e) {
-                                System.err.println("Error adding movie to watchlist: " + e.getMessage());
+                            }
+                            catch (Exception exception) {
+                                System.err.println("Error adding movie to watchlist: " + exception.getMessage());
                             }
                         }
                     }
@@ -497,7 +499,7 @@ public class DBUserDataAccessObject implements SignupUserDataAccessInterface,
     /**
      * Leave a review for this user in the online DB.
      * @param review the review object to add to this user.
-     * @return
+     * @return success
      */
     public boolean leaveReview(MovieReview review) {
         final Document reviewDoc = new Document()
@@ -510,18 +512,17 @@ public class DBUserDataAccessObject implements SignupUserDataAccessInterface,
         }
 
         collection.updateOne(
-                    new Document("userId", review.getUserID()),
-                    new Document("$push", new Document("reviews", reviewDoc))
+                    new Document(USER_ID, review.getUserID()),
+                    new Document(PUSH, new Document("reviews", reviewDoc))
         );
 
         return true;
     }
 
-
     /**
      * Retrieve the reviews for this user.
      * @param user a user of this program.
-     * @return
+     * @return list
      */
 
     public List<MovieReview> getReviews(User user) {
@@ -530,7 +531,7 @@ public class DBUserDataAccessObject implements SignupUserDataAccessInterface,
 
         final List<MovieReview> reviews = new ArrayList<>();
 
-        final Document userDoc = collection.find(new Document("userId", user.getName())).first();
+        final Document userDoc = collection.find(new Document(USER_ID, user.getName())).first();
 
         if (userDoc != null) {
             final List<Document> rawReviews = (List<Document>) userDoc.get("reviews");
@@ -546,7 +547,8 @@ public class DBUserDataAccessObject implements SignupUserDataAccessInterface,
                     final MovieReview review;
                     if (writtenReview != null) {
                         review = reviewFactory.create(username, date, starRating, writtenReview, movieTitle);
-                    } else {
+                    }
+                    else {
                         review = reviewFactory.create(username, date, starRating, movieTitle);
                     }
                     reviews.add(review);
